--- a/resources/public/mind-meadow.css
+++ b/resources/public/mind-meadow.css
@@ -8,6 +8,11 @@ body, html {
     height: 100%;
     box-sizing:border-box;
 }
+.debug-bar {
+    position: fixed;
+    bottom: 0;
+    background: white;
+}
 
 .node {
     position: absolute;
