--- a/resources/public/mind-meadow.css
+++ b/resources/public/mind-meadow.css
@@ -4,9 +4,12 @@ body, html {
     height: 100%;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 .window-frame {
     height: 100%;
-    box-sizing:border-box;
 }
 .debug-bar {
     position: fixed;
@@ -18,6 +21,7 @@ body, html {
     position: absolute;
     background: white;
     padding: 10px;
+    box-sizing: content-box;
     border-radius: 5px;
     resize: both;
     overflow: auto;
