Don't show dom nodes in their intermediate states

--- a/resources/public/mind-meadow.css
+++ b/resources/public/mind-meadow.css
@@ -21,6 +21,7 @@ body, html {
     position: absolute;
     background: white;
     padding: 10px;
+    display: none;
     box-sizing: content-box;
     border-radius: 5px;
     resize: both;
